# wxWidgets

./: .bzrignore  .gitignore  .gitmodules  CMakeLists.txt  Makefile.in  configure  configure.in  sdlbuild.sh  sdlinstall.sh
wxx/wxIFM/: CMakeLists.txt  GTK2Readme.txt  Makefile.Debug.unix  Makefile.Release.unix  changelog.txt  readme.txt  todo.txt  wxIFM.dsp  wxIFM.dsw  wxIFM.sln  wxIFM_vc10.vcxproj  wxIFM_vc10.vcxproj.filters  wxIFM_vc8.sln  wxIFM_vc8.vcproj
wxx/wxIFM/docs/: building.dox  coordsystems.dox  internals.dox  main.dox  overview.dox
wxx/wxIFM/docs/html/: classwx_i_f_m_activate_event__inherit__graph.map  classwx_i_f_m_activate_event__inherit__graph.md5  classwx_i_f_m_add_child_event__inherit__graph.md5  classwx_i_f_m_add_top_container_event__inherit__graph.md5  classwx_i_f_m_begin_paint_event__inherit__graph.map  classwx_i_f_m_begin_paint_event__inherit__graph.md5  classwx_i_f_m_calc_rects_event__inherit__graph.map  classwx_i_f_m_calc_rects_event__inherit__graph.md5  classwx_i_f_m_child_data_base__inherit__graph.map  classwx_i_f_m_child_data_base__inherit__graph.md5  classwx_i_f_m_child_event__inherit__graph.map  classwx_i_f_m_child_event__inherit__graph.md5  classwx_i_f_m_component_button_event__inherit__graph.md5  classwx_i_f_m_component_visibility_changed_event__inherit__graph.map  classwx_i_f_m_component_visibility_changed_event__inherit__graph.md5  (+119 more)
wxx/wxIFM/icons/: btn_hide_h.xpm  btn_hide_hp.xpm  btn_max_hp.xpm  dock_center_mo.xpm  dock_down_mo.xpm  dock_left_mo.xpm  dock_right_mo.xpm  dock_up.xpm  dock_up_mo.xpm
wxx/wxIFM/samples/demo1/: demo1.dsp  (+9 more)
(+66 files in other folders)
